# .dotfiles

./: .envrc  .gitattributes  .gitignore  .pre-commit-config.yaml  .stow-global-ignore  .stow-local-ignore  README.md  pyproject.toml  setup_arch.sh
.github/workflows/: master.yaml
arch/: setup_arch.sh
docs/: MCP_SETUP.md  neovim-hotkeys.md  secrets-management.md  shell-hotkeys.md
docs/ai-tools/: README.md  copilot-cli-setup.md  intellij-copilot-setup.md  mcp-setup.md  openai-codex-cli-setup.md  terraform-instructions.md
docs/references/lazyvim/: README.md
docs/references/lazyvim/config/: keymaps.lua
home/: .stow-local-ignore  .zshenv  Makefile
home/.config/: .gitignore  .stow-local-ignore
home/.config/.copilot/: mcp-config.json
home/.config/alacritty/: alacritty.toml
home/.config/dev-container/: dev-env.zsh
home/.config/git/: config
home/.config/github-copilot/: .gitignore  copilot-instructions.md  mcp.json
home/.config/mcp/: claude_desktop_config.json  mcp.docker.json  mcp.json  mcp_config.json
home/.config/mise/: config.toml
home/.config/nvim/: init.lua  lazy-lock.json  lazyvim.json
home/.config/p10k/: .p10k.zsh
home/.config/thefuck/: settings.py
home/.config/tmux/: .gitignore  .tmux.conf  tmux.conf
home/.config/vim/: .vimrc
home/.config/wezterm/: wezterm.lua
home/.config/zsh/: .gitignore  .p10k.arch.zsh  .p10k.zsh  .zprofile  .zshenv  .zshrc
macOS/: .stow-local-ignore  Brewfile  iterm2.json  remap_mac_keys.sh  setup_macos.sh
scripts/: populate_home_zshenv.sh  populate_sys_zenv.sh  populate_sys_zshenv.sh  setup_unix.sh
(+51 files in other folders)
