[tool.poetry]
name = "dotfiles"
version = "0.2.0"
description = "My dotfiles"
authors = ["Steven Carpenter"]
readme = "README.md"
packages = [{include = "dotfiles"}]

[tool.poetry.dependencies]
python = "^3.13"
pre-commit = "^3.7.1"
poetry = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
